# neptune-client-scale

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  dev_requirements.txt  generator.py  pyproject.toml  test.py
.github/: license_header.txt  pull_request_template.md
.github/actions/install-package/: action.yml
.github/actions/test-unit/: action.yml
.github/workflows/: pre-commit.yml  release.yml  tests-e2e.yml  unit-in-pull-request.yml  unit.yml
src/neptune_client_scale/run/: operation_queue.py
src/neptune_scale/: __init__.py  envs.py  exceptions.py  legacy.py  parameters.py  projects.py  types.py  utils.py
src/neptune_scale/api/: __init__.py  api_client.py  attribute.py  exceptions.py  metrics.py  run.py  series_step.py  validation.py
src/neptune_scale/cli/: __init__.py  commands.py  main.py  misc.py  sync.py  util.py
src/neptune_scale/core/: logger.py  message_builder.py  metadata_splitter.py  metadata_splitters.py  process_killer.py  process_link.py  proto_utils.py  serialization.py  shared_var.py  styles.py  util.py  validation.py
src/neptune_scale/logging/: __init__.py  console_log_capture.py  logging_handler.py  logging_utils.py
src/neptune_scale/net/: __init__.py  api_client.py  ingest_code.py  projects.py  runs.py  serialization.py  util.py
src/neptune_scale/queue/: batching_queue.py  operation_queue.py
src/neptune_scale/run/: operation.py  run.py  synchronization_process.py
src/neptune_scale/storage/: operations.py
src/neptune_scale/sync/: aggregating_queue.py  console_log_capture.py  disk_queue.py  dispatcher.py  errors_tracking.py  file_upload.py  files.py  google_storage.py  lag_tracking.py  offline.py  (+10 more)
tests/: test_batching_queue.py
tests/e2e/: conftest.py  test_files.py  test_histograms.py  test_log_and_fetch.py  test_net.py  test_offline_mode.py  test_run.py  test_sync.py  test_sync_process_failures.py  util.py
tests/queue/: test_batching_queue.py  test_operation_queue.py
tests/unit/: conftest.py  test_aggregating_queue.py  test_attribute.py  test_disk_queue.py  test_envs.py  test_errors_monitor.py  test_exceptions.py  test_file_upload.py  test_histograms.py  test_integration_batching.py  test_lag_tracker.py  test_legacy_api.py  test_log_file.py  test_logger.py  test_message_builder.py  test_metadata_splitter.py  test_metadata_splitters.py  test_operations_queue.py  test_process_link.py  test_run.py  test_run_init_and_close.py  test_run_resume.py  test_run_urls.py  test_series_step.py  test_shared_var.py  test_storage.py  test_stream_operations.py  test_stringify_unsupported.py  test_sync_process.py  test_timer.py
(+50 files in other folders)
